--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,9 +24,9 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
-        "@ionic/storage": "2.0.1",
-        "@ngx-translate/core": "^7.0.0",
-        "@types/leaflet": "^1.0.65",
+        "@ionic/storage": "^2.0.1",
+        "@ngx-translate/core": "^7.1.0",
+        "@types/leaflet": "^1.0.67",
         "angular-in-memory-web-api": "^0.3.2",
         "cordova-android": "^6.2.3",
         "cordova-plugin-calendar": "^4.6.0",
@@ -35,6 +35,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -75,7 +76,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-calendar": {}
+            "cordova-plugin-calendar": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
