--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@asymmetrik/angular2-leaflet": "^2.1.5",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/in-app-browser": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "^2.0.1",
@@ -32,6 +33,7 @@
         "cordova-plugin-calendar": "^4.6.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -78,7 +80,8 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-calendar": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
