--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@asymmetrik/angular2-leaflet": "^2.1.5",
+        "@ionic-native/app-version": "^4.1.0",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/in-app-browser": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
@@ -30,6 +31,7 @@
         "@types/leaflet": "^1.0.67",
         "angular-in-memory-web-api": "^0.3.2",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-calendar": "^4.6.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
@@ -81,7 +83,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-calendar": {},
             "cordova-sqlite-storage": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-app-version": {}
         },
         "platforms": [
             "android"
