--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,6 +30,7 @@
         "@ngx-translate/core": "^7.1.0",
         "@types/leaflet": "^1.0.67",
         "angular-in-memory-web-api": "^0.3.2",
+        "angular2-dynamic-component": "^1.6.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-calendar": "^4.6.0",
@@ -45,8 +46,10 @@
         "ionicons": "3.0.0",
         "leaflet": "^1.1.0",
         "moment": "^2.18.1",
+        "ng-dynamic": "^3.0.2",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
+        "ts-metadata-helper": "0.0.4",
         "zone.js": "0.8.12"
     },
     "devDependencies": {
