--- a/trentorientaService/pom.xml
+++ b/trentorientaService/pom.xml
@@ -46,6 +46,19 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
