--- a/trentorientaService/pom.xml
+++ b/trentorientaService/pom.xml
@@ -41,11 +41,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
-<!-- 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-		</dependency> -->
 		<!-- SWAGGER -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -65,6 +60,12 @@
 			<artifactId>spring-wadl-generator</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<!-- USDL -->
+		<dependency>
+			<groupId>it.smartcommunitylab</groupId>
+			<artifactId>welive.bb.usdl.generator</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<!-- HTTP -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -76,7 +77,7 @@
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
 		</dependency>
- 		<!-- JSON -->
+		<!-- JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
