Terms and conditions fixed, Time of events at present day to fix

--- a/mobile/ionic.config.json
+++ b/mobile/ionic.config.json
@@ -1,5 +1,8 @@
 {
   "name": "trentorienta",
   "app_id": "trentorienta",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "integrations": {
+    "cordova": {}
+  }
 }
