--- a/mobile/package.json
+++ b/mobile/package.json
@@ -32,12 +32,12 @@
         "@types/leaflet": "^1.0.67",
         "angular-in-memory-web-api": "^0.3.2",
         "angular2-dynamic-component": "^1.6.1",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "6.2.3",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-calendar": "^4.6.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-globalization": "^1.0.7",
+        "cordova-plugin-globalization": "^1.0.9",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
