--- a/mobile/package.json
+++ b/mobile/package.json
@@ -32,7 +32,7 @@
         "@types/leaflet": "^1.0.67",
         "angular-in-memory-web-api": "^0.3.2",
         "angular2-dynamic-component": "^1.6.1",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "6.2.3",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-calendar": "^4.6.0",
         "cordova-plugin-console": "^1.0.7",
@@ -53,7 +53,8 @@
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "ts-metadata-helper": "0.0.4",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "cordova-browser": "~5.0.3"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.12",
@@ -94,7 +95,8 @@
             "cordova-plugin-globalization": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
