--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,102 +1,106 @@
 {
-    "name": "trentorienta",
-    "version": "0.0.0",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
-    },
-    "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@asymmetrik/angular2-leaflet": "^2.1.5",
-        "@ionic-native/app-version": "^4.1.0",
-        "@ionic-native/core": "^3.12.1",
-        "@ionic-native/globalization": "^4.1.0",
-        "@ionic-native/in-app-browser": "^4.1.0",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic/storage": "^2.0.1",
-        "@ngx-translate/core": "^7.2.0",
-        "@types/leaflet": "^1.0.67",
-        "angular-in-memory-web-api": "^0.3.2",
-        "angular2-dynamic-component": "^1.6.1",
-        "cordova-android": "6.2.3",
-        "cordova-plugin-app-version": "^0.1.9",
-        "cordova-plugin-calendar": "^4.6.0",
-        "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-globalization": "^1.0.9",
-        "cordova-plugin-inappbrowser": "^1.7.1",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "cordova-sqlite-storage": "^2.0.4",
-        "ionic-angular": "3.5.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "leaflet": "^1.1.0",
-        "moment": "^2.18.1",
-        "ng-dynamic": "^3.0.2",
-        "ng2-translate": "^5.0.0",
-        "rxjs": "5.4.0",
-        "sw-toolbox": "3.6.0",
-        "ts-metadata-helper": "0.0.4",
-        "zone.js": "0.8.12",
-        "cordova-browser": "~5.0.3"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "1.3.12",
-        "@ionic/cli-plugin-cordova": "1.6.1",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.7.0",
-        "typescript": "2.3.4"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-console",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-device",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [
-        "ios",
-        {
-            "platform": "ios",
-            "version": "",
-            "locator": "ios"
-        }
-    ],
-    "description": "trentorienta: An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-calendar": {},
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-app-version": {},
-            "cordova-plugin-globalization": {}
-        },
-        "platforms": [
-            "android",
-            "browser"
-        ]
+  "name": "trentorienta",
+  "version": "0.0.0",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@asymmetrik/angular2-leaflet": "^2.1.5",
+    "@ionic-native/app-version": "^4.1.0",
+    "@ionic-native/core": "^3.12.1",
+    "@ionic-native/globalization": "^4.1.0",
+    "@ionic-native/in-app-browser": "^4.1.0",
+    "@ionic-native/screen-orientation": "^4.5.2",
+    "@ionic-native/splash-screen": "3.12.1",
+    "@ionic-native/status-bar": "3.12.1",
+    "@ionic/storage": "^2.0.1",
+    "@ngx-translate/core": "^7.2.0",
+    "@types/leaflet": "^1.0.67",
+    "angular-in-memory-web-api": "^0.3.2",
+    "angular2-dynamic-component": "^1.6.1",
+    "cordova-android": "6.2.3",
+    "cordova-browser": "~5.0.3",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-calendar": "^4.6.0",
+    "cordova-plugin-console": "^1.0.7",
+    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-globalization": "^1.0.9",
+    "cordova-plugin-inappbrowser": "^1.7.1",
+    "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-sqlite-storage": "^2.0.4",
+    "es6-promise-plugin": "^4.2.2",
+    "ionic-angular": "3.5.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "leaflet": "^1.1.0",
+    "moment": "^2.18.1",
+    "ng-dynamic": "^3.0.2",
+    "ng2-translate": "^5.0.0",
+    "rxjs": "5.4.0",
+    "sw-toolbox": "3.6.0",
+    "ts-metadata-helper": "0.0.4",
+    "zone.js": "0.8.12"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "1.3.12",
+    "@ionic/cli-plugin-cordova": "1.6.1",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "ionic": "3.7.0",
+    "typescript": "2.3.4"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-console",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    {
+      "platform": "ios",
+      "version": "",
+      "locator": "ios"
     }
+  ],
+  "description": "trentorienta: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-calendar": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-screen-orientation": {}
+    },
+    "platforms": [
+      "android",
+      "browser"
+    ]
+  }
 }
